--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,7 +139,6 @@ body {
   margin: 2%;
   border-radius: 3px;
   border: 2px solid #686c6d;
-  box-sizing: border-box;
   padding: 4px;
   width: 96%;
   font-size: 16px;
@@ -171,7 +170,6 @@ body {
   margin: 2%;
   border-radius: 3px;
   border: 2px solid #686c6d;
-  box-sizing: border-box;
   padding: 4px;
   width: 96%;
   font-size: 16px;
@@ -245,7 +243,6 @@ body {
 }
 
 #join-game button {
-  box-sizing: border-box;
   font-size: 16px;
   width: 100%;
   background: #111;
@@ -335,7 +332,6 @@ button {
   background: #fff;
   border: 2px solid #fff;
   border-radius: 16px;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
 }
@@ -392,7 +388,6 @@ button {
   padding: 3px;
   color: #323032;
   padding: 3px;
-  box-sizing: border-box;
   text-align: center;
 }
 
@@ -440,7 +435,6 @@ button {
   color: #fff;
   background: #323032;
   font-size: 16px;
-  box-sizing: border-box;
 }
 
 #card-packs button.enabled {
